samples/_failures_safe/1761258016_e31418_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7801120d.c: In function ‘main’:
./samples/SAFE/__tmp_7801120d.c:168:13: error: expected declaration or statement at end of input
  168 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_7801120d.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7801120d.c:168:13: error: expected declaration or statement at end of input
